added pictures for read me

--- a/Local-Pizza/Resources/en.lproj/Localizable.strings
+++ b/Local-Pizza/Resources/en.lproj/Localizable.strings
@@ -67,7 +67,7 @@
 "Запеченная картошечка с пряными специями" = "Baked potatoes with spicy spices";
 
 "Креветки в кляре" = "Shrimp in Batter";
-"Кляр изумительно хрустящий, креветки сочные и ароматные" = "Deliciously crispy batter, juicy and flavorful shrimp";
+"Кляр изумительно хрустящий, креветки сочные и ароматные." = "Deliciously crispy batter, juicy and flavorful shrimp";
 
 "Наггетсы" = "Chicken Nuggets";
 "Хрустящие кусочки куриного мяса, обжаренные до золотистой корочки" = "Crispy pieces of chicken, fried to a golden crust";
